--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,12 @@
     "sourceMap": true,
     "module": "es6",
     "target": "es5",
-    "allowJs": true
+    "allowJs": true,
+    "jsx": "react-jsx",
+    "jsxImportSource": "perseus",
+    "baseUrl": ".",
+    "paths": {
+      "perseus": ["src/perseus"]
+    }
   }
 }
